2009-08-07  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/glue/clipboard.c: Kill as it is not used any more.

2009-08-07  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/SelectionData.custom: Use gtk_selection_data_get_data instead
	of a glue func to access the data field.

2009-08-05  Christian Hoff  <christian_hoff@gmx.net>

	* sample/CustomcellRenderer.cs: Use GObject property registration
	instead of a CellDataFunc.

2009-08-05  Christian Hoff  <christian_hoff@gmx.net>

	* generator/InterfaceGen: Override CallByName to handle interface
	adaptors properly.	[Fixes #527478]

2009-08-01  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: lock the types hash to support threaded access and 
	type registration.  Apparently gtype access/registration is threadsafe
	in glib.  [Fixes #526229]

2009-07-30  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: remove var keyword usage to fix build on
	.Net 2.0.  fix a couple mixed line endings as well.

2009-07-27  Mike Gorse  <mgorse@novell.com>

	* atk/Atk.metadata: Remove owned for Relation.GetTarget.

2009-07-26  Mike Kestner  <mkestner@novell.com>

	* bootstrap-for-the-insane: update the assembly versions and package
	version and kill the policies.  Give a little more helpful message of 
	doom.

2009-07-24  Christian Hoff  <christian_hoff@gmx.net>

	* parser/Makefile.am: Another build fix. Sigh...

2009-07-24  Christian Hoff  <christian_hoff@gmx.net>

	* generator/gapi3-codegen.in, parser/gapi3-fixup.in, parser/gapi3-parser.in:
	"svn add" a few missing files to resurrect the build.

2009-07-23  Christian Hoff  <christian_hoff@gmx.net>

	* configure.in.in, Makefile.include: Bump up GAPI version to 3.0.
	* bootstrap-2.14: Renamed to bootstrap-for-the-insane, added message
	of doom.	[Fixes #521449]

2009-07-21  Christian Hoff  <christian_hoff@gmx.net>

	* glib/GInterfaceAdapter.cs: Fix a leak related to GCHandles not being freed.
	Patch from Mike Kestner with a minor tweak by me. [Fixes #523306]
