@@ -1,3 +1,8 @@
+2009-08-07  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Log.cs: rework the LogFunc marshaling and add SetDefaultHandler
+	binding to override all domains easily. [Fixes #517857]
+
 2009-08-07  Christian Hoff  <christian_hoff@gmx.net>
 
 	* gtk/glue/clipboard.c: Kill as it is not used any more.
